Completes MVP and marks directories

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@ all: commandline testdir
 .PHONY: all
 
 commandline: commandline.c
-	gcc -Wall -Wextra -o $@ $^
+	gcc -Wall -Wextra -o $@.exe $^
 
 testdir: testdir.c
-	gcc -Wall -Wextra -o $@ $^
+	gcc -Wall -Wextra -o $@.exe $^
